# the-shift-toward-open

./: README.md
code/ai_paper_downloader/: .gitignore  README.md  pyproject.toml  requirements.txt  test_aaai.sh  test_iclr.sh  test_icml.sh  test_ijcai.sh  test_neurips.sh
code/ai_paper_downloader/ai_paper_downloader/: __main__.py  command_args.py  generate_safe_filename.py  main_entry.py
code/ai_paper_downloader/ai_paper_downloader/parser/: aaai.py  iclr.py  icml.py  ijcai.py  neurips.py
code/ai_paper_downloader/static_html/AAAI/: 2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020-track1.html  2020-track2.html  2020-track3.html  2020-track4.html  2020-track5.html  2020-track6.html  2020-track7.html  2021-track1.html  2021-track10.html  2021-track11.html  2021-track12.html  2021-track13.html  2021-track14.html  2021-track15.html  2021-track16.html  (+48 more)
code/llm_evaluate/: .gitignore  README.md  evaluations.json  prompt.txt  pyproject.toml  questions.yaml  requirements.txt
code/llm_evaluate/config_examples/: config_chatgpt_azure.yaml  config_chatgpt_compatible_service.yaml  config_chatgpt_openai.yaml  config_claude_anthropic.yaml  config_claude_aws.yaml  config_gemini_multimodal.yaml  config_gemini_text.yaml  config_gemini_vertex_multimodal.yaml  config_gemini_vertex_text.yaml  config_ollama.yaml  config_vertex_maas.yaml
code/llm_evaluate/evaluate_papers/: __main__.py  args.py  evaluate.py  main.py  nlp.py  permute.py  structured_output.py
code/pdf_to_text/: .gitignore  README.md  extract_pdf_text.py  package-lock.json  pyproject.toml
(+797 files in other folders)
