[project]
name = "project-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.96.0",
    "google-genai>=1.73.1",
    "nltk>=3.9.4",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "tiktoken>=0.12.0",
]
