[project]
name = "pdf-to-text"
version = "0.1.0"
description = "Extract high-quality text from academic PDF papers using unstructured"
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.0.0",
    "pdfminer-six>=20221105",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
